# correlist

./: .gitignore  README.md  __init__.py  __main__.py  cli.py  pyproject.toml
data/: test_data.csv  test_data_2.csv
src/: CorrelationMatrix.py  Pipeline.py  util.py
test/: __init__.py  __main__.py  tests.py
